--- a/styles.css
+++ b/styles.css
@@ -20,11 +20,14 @@ text-align: left;
 
 
 }
+#name:focus {
 
+}
 
 #name {
   display: flex;
   flex-direction: column;
+  text-align: right;
 height: 40px;
 margin: .5rem;
 
@@ -34,6 +37,7 @@ margin: .5rem;
 #email {
   display: flex;
   flex-direction: column;
+  text-align: right;
 height: 40px;
 margin: .5rem;
   width: 90%;
