--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,4 @@
+
 h1 {
 
 color: black;
@@ -13,6 +14,8 @@ color: gray;
 .contact {
   color:  black;
 }
+
+
 form {
 
 text-align: left;
@@ -20,7 +23,11 @@ text-align: left;
 
 
 }
-
+legend {
+color: black;
+  font-size: 40px;
+  font-weight: bold;
+}
 input::placeholder {
   text-align: right;
 }
@@ -84,7 +91,7 @@ height: 40px;
   flex-direction: column;
   margin: .5rem;
   height: 40px;
-    width: 20%;
+    width: 50%;
 
 }
 #html-news {
@@ -114,8 +121,6 @@ button {
 height: 60px;
 }
 body {
-
-
 
 }
 input {
@@ -157,5 +162,51 @@ body {
 
 margin: 0 20%;
 }
+#zip {
+display: inline-block;
+    width: 25%;
 
+}
+form {
+
+
+}
+
+label {
+
+
+}
+input {
+
+}
+
+#name {
+  display: inline-block;
+width: 75%;
+
+}
+#email {
+  display: inline-block;
+width: 75%;
+
+}
+#phone {
+  display: inline-block;
+width: 75%;
+}
+#address {
+  display: inline-block;
+width: 75%;
+
+}
+#city {
+  display: inline-block;
+width: 75%;
+
+}
+#state {
+  display: inline-block;
+width: 75%;
+
+}
 }
