--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,19 @@ fieldset {
   outline: none;
   border: none;
 }
+input:focus {
+    background-color: lightblue;
 
+}
+
+select:focus {
+    background-color: lightblue;
+
+}
+textarea:focus {
+    background-color: lightblue;
+    
+}
 .thick {
   height: 3px;
     background-color: black;
@@ -34,7 +46,7 @@ color: gray;
 .start {
   text-align: center;
   padding-bottom: 45px;
-
+background-color: ivory;
 }
 .contact {
   color:  black;
@@ -144,6 +156,7 @@ button {
      background-color:  aqua;
      color: white;
 height: 60px;
+
 }
 body {
 
@@ -167,7 +180,7 @@ textarea {
 height: 100px;
 width: 100%;
 background-color: #e8eeef;
-
+margin-top: 20px;
 
  }
 
